http/css refactorsng